--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,12 +1,11 @@
-BUILT_SOURCES = rules_bison.h
-AM_YFLAGS = -d -p rules
-AM_LFLAGS = -o$(LEX_OUTPUT_ROOT).cc
-#AM_LFLAGS = -olex.yy.c
-
+AM_YFLAGS = -d
+AM_LFLAGS = -o$(LEX_OUTPUT_ROOT).c
+CLEANFILES = rules_bison.cc rules_flex.cc
 
 libosmgl_LTLIBRARIES = libosmgl.la
 libosmgldir=$(includedir)/osmgl
-libosmgl_la_SOURCES = osmgl.cc rules_bison.yy rules_flex.ll
-libosmgl_la_CPPFLAGS = -I@top_srcdir@/include ${XML_CFLAGS}
+libosmgl_la_SOURCES = osmgl.cc rules_flex.ll rules_bison.yy 
+libosmgl_la_CXXFLAGS = -I@top_srcdir@/include ${XML_CFLAGS}
 libosmgl_la_LIBS = ${XML_LIBS}
 libosmgl_HEADERS = @top_srcdir@/include/osmgl/osmgl.hh
+BUILT_SOURCES = rules_bison.h
