--- a/example/Makefile.am
+++ b/example/Makefile.am
@@ -1,5 +1,5 @@
 bin_PROGRAMS = example
 example_SOURCES = example.cc
 example_CXXFLAGS = -I@top_srcdir@/include ${XML_CFLAGS} ${GLUT_CFLAGS} ${GL_CFLAGS}
-example_LDADD = @top_builddir@/src/libosmgl.la ${XML_LIBS} ${GLUT_LIBS} ${GL_LIBS} 
+example_LDADD = @top_builddir@/src/libosmgl.la ${XML_LIBS} ${GLUT_LIBS} ${GL_LIBS} ${GLU_LIBS} 
 
